syntax = "proto3";

package api.commission.service.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "agents/api/commission/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.commission.service.v1";

service Commission {
	rpc HandleOrderCommission (HandleOrderCommissionRequest) returns (HandleOrderCommissionReply);
	// 增加链上每个用户的注册量，通过最下游的代理 ID
	rpc IncChainRegistrationCountByDirectUser(IncChainRegistrationCountByDirectUserReq) returns (IncChainRegistrationCountByDirectUserReply);
	// 获取指定用户的累计佣金
	rpc GetUserTotalCommission (GetUserTotalCommissionRequest) returns (GetUserTotalCommissionReply) {
		option (google.api.http) = {
			get: "/v1/users/{user_id}/total_commission"
		};
	};
	// 列出每个用户的累计佣金
	rpc ListTotalCommission (ListTotalCommissionRequest) returns (ListTotalCommissionReply) {
		option (google.api.http) = {
			get: "/v1/total_commissions"
		};
	};
	// 列出每个下游代理的累计佣金
	rpc ListTotalCommissionByParent(ListTotalCommissionByParentReq) returns (ListTotalCommissionByParentReply) {
		option (google.api.http) = {
			get: "/v1/users/{parent_id}/children/total_commissions"
		};
	};

	rpc ListCommissionByUser(ListCommissionByUserReq) returns (ListCommissionByUserReply) {
		option (google.api.http) = {
			get: "/v1/users/{user_id}/commissions"
		};
	}
}

message ListCommissionByUserReq{
	string user_id = 1 [(validate.rules).string = {uuid: true}];
	// query params
	string order_by = 3;
	string date = 4;	// 如果 date 被指定将忽略 order_by 相关的参数
	int32 limit = 5;
	int32 offset = 6;
}
message ListCommissionByUserReply{
	message Commission {
		int64 indirect_recharge_amount = 1;
		int64 direct_recharge_amount = 2;
		int64 indirect_registration_count = 3;
		int64 direct_registration_count = 4;
		google.protobuf.Timestamp date = 5;
	};
	string user_id = 1;
	repeated Commission commissions = 2;
}

message IncChainRegistrationCountByDirectUserReq {
	string user_id = 1 [(validate.rules).string = {min_len: 1}];
}

message IncChainRegistrationCountByDirectUserReply {
	
}

message HandleOrderCommissionRequest {
	string domain = 1 [(validate.rules).string = {min_len: 1}];
	int32 amount = 2 [(validate.rules).int32 = {gt: 0}];
}
message HandleOrderCommissionReply {}

message GetUserTotalCommissionRequest {
	string user_id = 1 [(validate.rules).string = {min_len: 1}];
}
message GetUserTotalCommissionReply {
	string id = 1;
	string user_id = 2;
	int32 total_commission = 3;
	int32 today_commission = 4;
	int32 settled_commission = 5;
	int32 total_registration_count = 6;
	int32 today_registration_count = 7;
}

message ListTotalCommissionRequest {}
message ListTotalCommissionReply {
	repeated GetUserTotalCommissionReply commissions = 1;
}

message ListTotalCommissionByParentReq{
	string parent_id = 1 [(validate.rules).string = {min_len: 1}];
}
message ListTotalCommissionByParentReply{
	repeated GetUserTotalCommissionReply commissions = 1;
}